fix:Fixed problem of global.cc overflow:hidden
moved 'body{overflow:hidden} to player/page style

#68

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,5 +9,4 @@ body {
   /* off-white background */
   background-color: #f8f8f8 !important;
   box-sizing: border-box;
-  overflow: hidden;
 };
